# Uniform_MCMC_Sampler

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  Responses.md
.devcontainer/: devcontainer.json
data/: problem_data_2D.txt  problem_data_4D.txt
include/: MetropolisHastingsSampler.hpp  ModelFunctions.hpp  Observations.hpp  ParamInfo.hpp  Plot.hpp  Sampler.hpp  UniformSampler.hpp
source/: CMakeLists.txt
source/app/: CMakeLists.txt  MixedSamplingApp.cpp  UniformSamplingApp.cpp
source/lib/: CMakeLists.txt  ModelFunctions.cpp  Observations.cpp
test/: CMakeLists.txt
test/include/: data.h
test/source/: data.cpp  test_sampler.cpp
test/test_data/: testing_data.txt  testing_data1.txt  testing_data2.txt  testing_data3.txt  testing_data4.txt  testing_data_2D.csv  testing_data_2D.txt
